fixed z-index issue

--- a/apps/faces/resources/style.css
+++ b/apps/faces/resources/style.css
@@ -44,7 +44,7 @@ div.face-bottom-overlay {
 	position: relative;
 	top: 146px;
 	width: 199px;
-	z-index: -1;
+	z-index: 20;
 }
 
 div.face-background {
@@ -53,5 +53,5 @@ div.face-background {
   position: absolute;
   left: 0px;
   top: 0px;
-  z-index: -10;
+  z-index: 10;
 }
